# base-project-template

./: .gitignore  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: continuous_integration.yml
